changes are made

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Page Title</title>
-  
+
+  <script src="./javascript.js" defer></script>
 </head>
 <body>
-  <script src="javascript.js"></script>
-  <script>
-    // Your JavaScript goes here!
-    console.log("Hello, World!")
-  </script>
+  
+  <button class="rock">Rock</button>
+  <button class="paper">Paper</button>
+  <button class="scissor">Scissor</button>
+
+  <div id ="container"></div>
 </body>
+
 </html>
